--- a/04 Alpha Streams/03 Required Alpha Features/02 Backtests.html
+++ b/04 Alpha Streams/03 Required Alpha Features/02 Backtests.html
@@ -2,14 +2,15 @@
     Backtesting is not the only or even most important part of the Alpha development process. However, it is essential to display how a strategy performs in a 
     variety of market conditions and not just in a market selected to boost overall performance during that period.
 </p>
-<h4>Length</h4>
+<h3>
+<h4>Minimum Length</h4>
 <p>
     Having a backtest that displays excellent performance over the past 9-months doesn't mean that the strategy isn't valuable, but it displays considerably less information
     than one that covers the last 5 years. High-value Alphas perform consistently over long periods, and longer backtests contain more
     information about the algorithm performance across time. Backtests should consist 
     of 5 or more years worth of data before being submitted.
 </p>
-<h4>Market Conditions</h4>
+<h5>Market Conditions</h5>
 <p>
     Algorithm performance across a variety of market conditions is significant. It is easier to develop algorithms that perform well in bull-markets than it is 
     in a down-market. Alphas that can display robust performance across bull-markets, bear-markets, volatile markets, and illiquid markets have much more appeal than an 
@@ -20,10 +21,25 @@
     decline at different times, even if they are somewhat correlated or inter-dependent. Make sure that the backtests reflect the different 
     market conditions specific to the securities the algorithm is trading.
 </p>
+
 <h4>Benchmark</h4>
 <p>
     Investors want to know whether or not a strategy can outperform the broader market to which it is generally exposed. For equities, investors often set the benchmark 
     as the S&P 500, Russell 2000, or another equity index. For example, an algorithm that trades commodity ETFs should pick a benchmark of a popular commodity ETF while a fixed income 
     algorithm should select a fixed income ETFs. This allows investors to compare performance and determine whether the risks, borrowing costs, and commission are worth it to achieve the algorithm 
     results rather than just buying and holding the benchmark.
+</p>
+<h4>Brokerage Model</h4>
+<p>
+    We've developed a Brokerage Model specifically for Alpha Streams. This has been created using the feedback from fund clients to mimic the fees, borrowing costs, slippage,
+    and other constraints that funds face in live trading. Using the <a href = "https://www.quantconnect.com/docs/alpha-streams/alpha-fee-models">Alpha Streams Brokerage Model</a>
+    is required for submission, so we encourage you to test your models using it so a live deployment will behave similarly to your backtest.
+</p>
+<h4>Insights</h4>
+<p>
+    <a href="https://www.quantconnect.com/docs/alpha-streams/overview#Overview-What-Is-An-Insight">Insights</a> are necessary for both Classic and Framework-style
+    algorithms. Insights are crucial to providing funds with an idea of the predictive power of a model. With Insights, you can
+    control the duration, direction, magnitude, and confidence of your model's predictions. Placing an order only provides the implicit prediction that the security's movement
+    will move in a specific direction. Classic algorithms must use the <a href="https://www.quantconnect.com/docs/alpha-streams/upgrading-classic-algorithms#Upgrading-Classic-Algorithms-Converting-Classic-Algorithms">EmitInsights</a>
+    API, while Framework algorithms produce Insights inside the Alpha model.
 </p>
